objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Job_Type__c</fullName>
        <description>To be selected when a Job is added</description>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bureau Task</fullName>
                </value>
                <value>
                    <fullName>Express Bureau</fullName>
                </value>
                <value>
                    <fullName>Offline Express</fullName>
                </value>
                <value>
                    <fullName>Offline Project</fullName>
                </value>
                <value>
                    <fullName>Offline Task</fullName>
                </value>
                <value>
                    <fullName>OLB</fullName>
                    <default>true</default>
                    <label>OLB</label>
                </value>
                <value>
                    <fullName>Online Express</fullName>
                </value>
                <value>
                    <fullName>Online Task</fullName>
                </value>
                <value>
                    <fullName>Premier Bureau</fullName>
                </value>
                <value>
                    <fullName>Project - 360</fullName>
                </value>
                <value>
                    <fullName>Project - 360 Managed Serv</fullName>
                </value>
                <value>
                    <fullName>Project - Managed Serv</fullName>
                </value>
                <value>
                    <fullName>Project - Other</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>SHL Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_outside_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Job completion time less than SLA required.</description>
        <label>Job outside SLA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_s_Account_Owner_Name__c</fullName>
        <formula>Account__r.Owner.FirstName +&quot; &quot;+ Account__r.Owner.LastName</formula>
        <label>Job&apos;s Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Confirmation_to__c</fullName>
        <label>Launch Confirmation To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <formula>Text(Opportunity__r.Likelihood__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likelihood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_Line_of_Business__c</fullName>
        <description>This field stores the MS- Line of business selected by the user</description>
        <label>MS - Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TA - Corporate</fullName>
                </value>
                <value>
                    <fullName>TA - Credentialing</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Talent Management (Dashboards)</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Analytics)</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Batch)</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (School)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Service_Commenced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy MS Commenced</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Job__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Managed Service Commenced</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Jobs (Managed Service Commenced)</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managed_Services_Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used on MS Commenced Project.</description>
        <label>Legacy MS Pipeline</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Job__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Managed Service Pipeline</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Commenced Projects</relationshipLabel>
        <relationshipName>Commenced_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managed_Services_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Services Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_Services__c</fullName>
        <label>Managed Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BureauPerDay</fullName>
                </value>
                <value>
                    <fullName>BureauPerHour</fullName>
                </value>
                <value>
                    <fullName>MFSBESPOKEQC</fullName>
                </value>
                <value>
                    <fullName>MFSBULKUP</fullName>
                </value>
                <value>
                    <fullName>MFSEXPRESS</fullName>
                </value>
                <value>
                    <fullName>MFSHDCOPYREP</fullName>
                </value>
                <value>
                    <fullName>MFSPREMSERV</fullName>
                </value>
                <value>
                    <fullName>MFSPROSETUP</fullName>
                </value>
                <value>
                    <fullName>MFSREMINDERS</fullName>
                </value>
                <value>
                    <fullName>MFSSTATUSREP</fullName>
                </value>
                <value>
                    <fullName>OND360BULKUP</fullName>
                </value>
                <value>
                    <fullName>OND360EXPRESS</fullName>
                </value>
                <value>
                    <fullName>OND360HDCOPYREP</fullName>
                </value>
                <value>
                    <fullName>OND360PREMSERV</fullName>
                </value>
                <value>
                    <fullName>OND360PROSETUP</fullName>
                </value>
                <value>
                    <fullName>OND360REMINDERS</fullName>
                </value>
                <value>
                    <fullName>OND360STATUSREP</fullName>
                </value>
                <value>
                    <fullName>ONDBULKUP</fullName>
                </value>
                <value>
                    <fullName>ONDHDCOPYREP</fullName>
                </value>
                <value>
                    <fullName>ONDPREMSERV</fullName>
                </value>
                <value>
                    <fullName>ONDPROSETUP</fullName>
                </value>
                <value>
                    <fullName>ONDREMINDERS</fullName>
                </value>
                <value>
                    <fullName>ONDRESULTSUMARY</fullName>
                </value>
                <value>
                    <fullName>ONDSENDREPORT</fullName>
                </value>
                <value>
                    <fullName>ONDSTATUSREP</fullName>
                </value>
                <value>
                    <fullName>PD360EXPRESS</fullName>
                </value>
                <value>
                    <fullName>PD360HDCOPYREP</fullName>
                </value>
                <value>
                    <fullName>PD360PREMSERV</fullName>
                </value>
                <value>
                    <fullName>PD360PROSETUP</fullName>
                </value>
                <value>
                    <fullName>PD360REMINDERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_report_handling__c</fullName>
        <label>Manual Report Handling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoOfCandidates__c</fullName>
        <description>Number of candidates to be tested for the bureau job</description>
        <label>Number of Candidates</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Transferred_Candidate_Count__c</fullName>
        <description>This field is created to store the count of not transferred ratings on the Job. Transfer is related to FTP</description>
        <label>Not Transferred Candidate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Assessments__c</fullName>
        <description>Sum of field &quot;Number of Product/Assessment&quot; on Candidates related to Job</description>
        <inlineHelpText>The sum of field on Candidate named as &quot;Number of Product/Assessment&quot;</inlineHelpText>
        <label>Number of Assessments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Candidates__c</fullName>
        <description>Number of candidates to be tested for the bureau job</description>
        <label>Number of Candidates</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Changes__c</fullName>
        <label>Number of Change Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Manpower_required__c</fullName>
        <label>Number of Manpower required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Participants_New__c</fullName>
        <description>This field is created on the place of old Number of Participant field while Relationship conversion. 
Sum of field &quot;&quot;Number_of_participants__c&quot;&quot; on Candidates related to Job</description>
        <label>Number of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Respondents_New__c</fullName>
        <description>This field is created on the place of old Number of Respondent field while Relationship conversion. 
Sum of field &quot;&quot;Number_of_Respondents__c&quot;&quot; on Candidates related to Job.</description>
        <label>Number of Respondents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <label>Number of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLBReferenceID__c</fullName>
        <label>Online Bureau Ref ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLBReferenceURL__c</fullName>
        <label>Online Bureau Ref URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OLBReference__c</fullName>
        <formula>HYPERLINK(&quot;https://central.shl.com/olb/Pages/OrderSummary.aspx?OrderID=&quot;&amp;  OLBReferenceID__c  ,  Online_Bureau_Ref__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Bureau Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Details__c</fullName>
        <label>Offering Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Offering_Details</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offline_Instruments_Ordered__c</fullName>
        <description>Made historic 26/2/08 - JM when replaced by 4 new lists due to globalisation and limits in existing picklists</description>
        <label>Offline Instruments Ordered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BURSERVICE</fullName>
                </value>
                <value>
                    <fullName>CSAT</fullName>
                </value>
                <value>
                    <fullName>CSBOLPROJECT</fullName>
                </value>
                <value>
                    <fullName>CSH</fullName>
                </value>
                <value>
                    <fullName>CSM32</fullName>
                </value>
                <value>
                    <fullName>CSM4.2</fullName>
                </value>
                <value>
                    <fullName>CSM5.2</fullName>
                </value>
                <value>
                    <fullName>CSMAOII</fullName>
                </value>
                <value>
                    <fullName>CSMCCCI</fullName>
                </value>
                <value>
                    <fullName>CSMCCSQ</fullName>
                </value>
                <value>
                    <fullName>CSMCPI</fullName>
                </value>
                <value>
                    <fullName>CSMFS4.2</fullName>
                </value>
                <value>
                    <fullName>CSMFS5.2</fullName>
                </value>
                <value>
                    <fullName>CSMI</fullName>
                </value>
                <value>
                    <fullName>CSMII</fullName>
                </value>
                <value>
                    <fullName>CSMIMCP</fullName>
                </value>
                <value>
                    <fullName>CSMIMCP+</fullName>
                </value>
                <value>
                    <fullName>CSMMC32</fullName>
                </value>
                <value>
                    <fullName>CSMP32</fullName>
                </value>
                <value>
                    <fullName>CSMPAOII</fullName>
                </value>
                <value>
                    <fullName>CSMPCCSQ</fullName>
                </value>
                <value>
                    <fullName>CSMPDE</fullName>
                </value>
                <value>
                    <fullName>CSMPFS4.2</fullName>
                </value>
                <value>
                    <fullName>CSMPFS5.2</fullName>
                </value>
                <value>
                    <fullName>CSMPGOII</fullName>
                </value>
                <value>
                    <fullName>CSMPMQ</fullName>
                </value>
                <value>
                    <fullName>CSMPSCEN</fullName>
                </value>
                <value>
                    <fullName>CSMQM5</fullName>
                </value>
                <value>
                    <fullName>CSMSCEN</fullName>
                </value>
                <value>
                    <fullName>CSMT32</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offline_Reports__c</fullName>
        <label>Offline Reports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AOIIProfOf</fullName>
                </value>
                <value>
                    <fullName>AOIIRepOf</fullName>
                </value>
                <value>
                    <fullName>CCCISinRatProOf</fullName>
                </value>
                <value>
                    <fullName>CCSQCustomRepof</fullName>
                </value>
                <value>
                    <fullName>CCSQExecOf</fullName>
                </value>
                <value>
                    <fullName>CCSQInterOf</fullName>
                </value>
                <value>
                    <fullName>CCSQPersOf</fullName>
                </value>
                <value>
                    <fullName>CCSQPJMInterOf</fullName>
                </value>
                <value>
                    <fullName>CCSQPJMRepOf</fullName>
                </value>
                <value>
                    <fullName>CCSQProfOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2LNarOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2PersOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2PremOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2SNarOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2StandOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2StresOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2TNarOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2TProfOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2BehStylOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2CompStylOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2DATAEXTROF</fullName>
                </value>
                <value>
                    <fullName>CM5.2IndFeedOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2LNarOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2PersOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2PremOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2ProfOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2SellStylOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2SNarOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2StandOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2StressOf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offline_Scoring__c</fullName>
        <label>Offline Scoring</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AbilityScor+7Of</fullName>
                </value>
                <value>
                    <fullName>AbilityScor-3Of</fullName>
                </value>
                <value>
                    <fullName>AbilityScor-6Of</fullName>
                </value>
                <value>
                    <fullName>AMTAdm&amp;SupOf</fullName>
                </value>
                <value>
                    <fullName>AMTMScoreOf</fullName>
                </value>
                <value>
                    <fullName>AOBAdm&amp;SupOf</fullName>
                </value>
                <value>
                    <fullName>AOBMscoreOf</fullName>
                </value>
                <value>
                    <fullName>ATBMScoreOf</fullName>
                </value>
                <value>
                    <fullName>ATSAdm&amp;SupOf</fullName>
                </value>
                <value>
                    <fullName>ATSMSCOREOF</fullName>
                </value>
                <value>
                    <fullName>BureauCANDFEEOf</fullName>
                </value>
                <value>
                    <fullName>BureauPerHour</fullName>
                </value>
                <value>
                    <fullName>CCASAdm&amp;SupOf</fullName>
                </value>
                <value>
                    <fullName>CCASMSCOREOF</fullName>
                </value>
                <value>
                    <fullName>CCCIMScoreOf</fullName>
                </value>
                <value>
                    <fullName>CCQLiteAdmOf</fullName>
                </value>
                <value>
                    <fullName>CCQMSCOREOF</fullName>
                </value>
                <value>
                    <fullName>CCSQAdm&amp;SupOf</fullName>
                </value>
                <value>
                    <fullName>CCSQCOMPON</fullName>
                </value>
                <value>
                    <fullName>CCSQImportOf</fullName>
                </value>
                <value>
                    <fullName>CCSQMScoreOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2Adm&amp;SupOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2HScoreOf</fullName>
                </value>
                <value>
                    <fullName>CM4.2MScoreOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2DataExtrOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2HScoreOf</fullName>
                </value>
                <value>
                    <fullName>CM5.2MScoreOf</fullName>
                </value>
                <value>
                    <fullName>CPIImportOf</fullName>
                </value>
                <value>
                    <fullName>CPIMScoreOf</fullName>
                </value>
                <value>
                    <fullName>CRTBAdm&amp;SupOf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_BU__c</fullName>
        <formula>TEXT(Account__r.BU__c )</formula>
        <label>Old_BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Admin__c</fullName>
        <label>Online Admin</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AMTAdm&amp;SupOn</fullName>
                </value>
                <value>
                    <fullName>AMTAdmOn</fullName>
                </value>
                <value>
                    <fullName>AOBAdmOn</fullName>
                </value>
                <value>
                    <fullName>AOIIAdmOn</fullName>
                </value>
                <value>
                    <fullName>ASOAdm</fullName>
                </value>
                <value>
                    <fullName>ASOAdm&amp;SupOn</fullName>
                </value>
                <value>
                    <fullName>ASOSERVICE</fullName>
                </value>
                <value>
                    <fullName>ATBAdmOn</fullName>
                </value>
                <value>
                    <fullName>ATSAdm&amp;SupOn</fullName>
                </value>
                <value>
                    <fullName>ATSAdminOn</fullName>
                </value>
                <value>
                    <fullName>BULKUPLOADON</fullName>
                </value>
                <value>
                    <fullName>BureauCANDFEEOn</fullName>
                </value>
                <value>
                    <fullName>BureauEOLProcFe</fullName>
                </value>
                <value>
                    <fullName>BurServLevel1</fullName>
                </value>
                <value>
                    <fullName>BurServLevel2</fullName>
                </value>
                <value>
                    <fullName>BurServLevel3</fullName>
                </value>
                <value>
                    <fullName>BurSevLevel1</fullName>
                </value>
                <value>
                    <fullName>BurSevLevel2</fullName>
                </value>
                <value>
                    <fullName>BurSevLevel3</fullName>
                </value>
                <value>
                    <fullName>CareerGonline</fullName>
                </value>
                <value>
                    <fullName>CareerGuidance</fullName>
                </value>
                <value>
                    <fullName>CCASAdm&amp;SupOn</fullName>
                </value>
                <value>
                    <fullName>CCASAdmOn</fullName>
                </value>
                <value>
                    <fullName>CCCIAdminOn</fullName>
                </value>
                <value>
                    <fullName>CCQAdmOn</fullName>
                </value>
                <value>
                    <fullName>CCQLiteAdmOn</fullName>
                </value>
                <value>
                    <fullName>CCSQ5.2AdmOn</fullName>
                </value>
                <value>
                    <fullName>CCSQ7.2AdmOn</fullName>
                </value>
                <value>
                    <fullName>CCSQAdm&amp;SupOn</fullName>
                </value>
                <value>
                    <fullName>CCSQAdmOn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Bureau_Ref__c</fullName>
        <label>Online Bureau Ref No.</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Online_Instruments_Ordered__c</fullName>
        <description>Made historic 26/2/08 - JM when replaced by 4 new lists due to globalisation and limits in existing picklists</description>
        <label>Online Instruments Ordered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BURSERVICE</fullName>
                </value>
                <value>
                    <fullName>CSBOLA</fullName>
                </value>
                <value>
                    <fullName>CSBOLAE</fullName>
                </value>
                <value>
                    <fullName>CSBOLAIMC</fullName>
                </value>
                <value>
                    <fullName>CSBOLAPMC</fullName>
                </value>
                <value>
                    <fullName>CSBOLAS</fullName>
                </value>
                <value>
                    <fullName>CSBOLASO</fullName>
                </value>
                <value>
                    <fullName>CSBOLAT</fullName>
                </value>
                <value>
                    <fullName>CSBOLAVER</fullName>
                </value>
                <value>
                    <fullName>CSBOLAWSQ</fullName>
                </value>
                <value>
                    <fullName>CSBOLC32</fullName>
                </value>
                <value>
                    <fullName>CSBOLC32+</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCALL</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCEO</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCIG</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCP</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCPER</fullName>
                </value>
                <value>
                    <fullName>CSBOLDAP32</fullName>
                </value>
                <value>
                    <fullName>CSBOLDSI</fullName>
                </value>
                <value>
                    <fullName>CSBOLDSIA</fullName>
                </value>
                <value>
                    <fullName>CSBOLEI</fullName>
                </value>
                <value>
                    <fullName>CSBOLER</fullName>
                </value>
                <value>
                    <fullName>CSBOLESC</fullName>
                </value>
                <value>
                    <fullName>CSBOLGRADP</fullName>
                </value>
                <value>
                    <fullName>CSBOLIMC</fullName>
                </value>
                <value>
                    <fullName>CSBOLIMCP</fullName>
                </value>
                <value>
                    <fullName>CSBOLIMCP+</fullName>
                </value>
                <value>
                    <fullName>CSBOLL32</fullName>
                </value>
                <value>
                    <fullName>CSBOLM32</fullName>
                </value>
                <value>
                    <fullName>CSBOLM32+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Reports__c</fullName>
        <label>Online Reports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>360IntLshipReOn</fullName>
                </value>
                <value>
                    <fullName>360SNRExLsCapOn</fullName>
                </value>
                <value>
                    <fullName>AbilityNarOn</fullName>
                </value>
                <value>
                    <fullName>AbilityProfOn</fullName>
                </value>
                <value>
                    <fullName>AbilityRepOn</fullName>
                </value>
                <value>
                    <fullName>AOIIProfOn</fullName>
                </value>
                <value>
                    <fullName>AOIIRepOn</fullName>
                </value>
                <value>
                    <fullName>APQ32CompOn</fullName>
                </value>
                <value>
                    <fullName>ASOreportOn</fullName>
                </value>
                <value>
                    <fullName>CA1 - OPQ32LeaderOn</fullName>
                </value>
                <value>
                    <fullName>CA1 - OPQ32ManPlusOn</fullName>
                </value>
                <value>
                    <fullName>CareerGuidance</fullName>
                </value>
                <value>
                    <fullName>CCCIcpComProfOn</fullName>
                </value>
                <value>
                    <fullName>CCCISinRatProOn</fullName>
                </value>
                <value>
                    <fullName>CCSQCOMPON</fullName>
                </value>
                <value>
                    <fullName>CCSQExecOn</fullName>
                </value>
                <value>
                    <fullName>CCSQInterOn</fullName>
                </value>
                <value>
                    <fullName>CCSQManOn</fullName>
                </value>
                <value>
                    <fullName>CCSQPersOn</fullName>
                </value>
                <value>
                    <fullName>CCSQPJMRepOn</fullName>
                </value>
                <value>
                    <fullName>CCSQProfOn</fullName>
                </value>
                <value>
                    <fullName>CF20cpComProfOn</fullName>
                </value>
                <value>
                    <fullName>CM4.2NARON</fullName>
                </value>
                <value>
                    <fullName>CM4.2PERSON</fullName>
                </value>
                <value>
                    <fullName>CM4.2PREMON</fullName>
                </value>
                <value>
                    <fullName>CM4.2STANDON</fullName>
                </value>
                <value>
                    <fullName>CM4.2STRESSON</fullName>
                </value>
                <value>
                    <fullName>CM4.2TPROFON</fullName>
                </value>
                <value>
                    <fullName>CM5.2BehStylOn</fullName>
                </value>
                <value>
                    <fullName>CM5.2CompRepOn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity_Currency__c &amp; &quot; &quot; &amp; TEXT(Opportunity__r.Opportunity_Amount_Formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Currency__c</fullName>
        <formula>TEXT(Opportunity__r.CurrencyIsoCode)</formula>
        <label>Opportunity Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_EACV__c</fullName>
        <formula>Opportunity_Currency__c &amp; &quot; &quot; &amp; TEXT(ROUND(Opportunity__r.EACV_Formula__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity EACV</label>
        <type>Text</type>
    </fields>
</CustomObject>